--- a/views/presentation.jade
+++ b/views/presentation.jade
@@ -322,7 +322,7 @@ script(type='text/javascript')
   });
 div.container.presentation
   div#titleBar
-    a(href="/list", class="button") return -1;
+    a(href="/list?conf=#{conf}", class="button") return -1;
     h4 #{uname}, Let's react to #{title}
   ul.emotionCnt.clearfix
     li.first-child
