--- a/views/presentation.jade
+++ b/views/presentation.jade
@@ -23,10 +23,10 @@ script(type='text/javascript')
         worker,sessionId,timeoutObject,loading,
         offsetTime = #{serverTime},
         commentBox =  '<li data-emotion="{{emotion}}" > '+
-                      '  <div class="emotion"><img width="50px" height="50px" src="/images/{{imgFileNm}}.png"/></div> '+
+                      '  <div class="emotion"><img width="50px" height="50px" src="{{avatar}}"/></div> '+
                       '  <div class="comment-body"> '+
                       '   <p>{{body}}</p> '+
-                      '   <small>by <em>{{name}}</em> <img src="{{avatar}}" height="15" width="15" /> on <time data-timestamp="{{date}}">{{timeString}}</time></small> '+
+                      '   <small>by <em>{{name}}</em> on <time data-timestamp="{{date}}">{{timeString}}</time></small> '+
                       '  </div> '+
                       '</li>';
     /* Below there are functions */
