--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,7 @@
 !!! 5
 html(lang='utf-8')
   head
+    meta(name="google-site-verification", content="z6KYGcgXCB8W69AyhRYiJLivcsm3XrvZZAvBObb4vsI")
     title= "Live.log"
     meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1")
     link(rel='stylesheet', href='/stylesheets/style.css')
